# prompt-evaluator

./: docker-compose.yml
backend/: pyproject.toml
backend/src/backend/: app.py  hosting.py
backend/src/backend/api/models/: __init__.py
backend/src/backend/db/models/: __init__.py
backend/tests/integration_tests/: test_traces.py
prompt-evaluator-ui/: package-lock.json  package.json
prompt-evaluator-ui/src/app/: page.tsx
